--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
     <artifactId>selenium-java</artifactId>
     <version>4.1.1</version>
 </dependency>
+<dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <optional>true</optional>
+</dependency>
 
 
    
